[EIN-23066]-alignemnt fix

--- a/src/app/modules/timesheets/containers/profile-details-container/profile-details-container.component.scss
+++ b/src/app/modules/timesheets/containers/profile-details-container/profile-details-container.component.scss
@@ -62,6 +62,7 @@ $chip-margin: 8px;
   &__info {
     display: flex;
     align-items: center;
+    margin-right: 20px;
 
     .e-avatar {
       margin-right: 16px;
